logs/dag_id=google_maps_reviews/run_id=scheduled__2025-05-05T000000+0000/task_id=export_to_csv/attempt=29.log
[2025-05-06T19:16:58.489+0000] {local_task_job_runner.py:123} INFO - ::group::Pre task execution logs
[2025-05-06T19:16:58.507+0000] {taskinstance.py:2614} INFO - Dependencies all met for dep_context=non-requeueable deps ti=<TaskInstance: google_maps_reviews.export_to_csv scheduled__2025-05-05T00:00:00+00:00 [queued]>
[2025-05-06T19:16:58.514+0000] {taskinstance.py:2614} INFO - Dependencies all met for dep_context=requeueable deps ti=<TaskInstance: google_maps_reviews.export_to_csv scheduled__2025-05-05T00:00:00+00:00 [queued]>
[2025-05-06T19:16:58.515+0000] {taskinstance.py:2867} INFO - Starting attempt 29 of 30
[2025-05-06T19:16:58.526+0000] {taskinstance.py:2890} INFO - Executing <Task(PythonOperator): export_to_csv> on 2025-05-05 00:00:00+00:00
[2025-05-06T19:16:58.536+0000] {warnings.py:112} WARNING - /home/***/.local/lib/python3.12/site-packages/***/task/task_runner/standard_task_runner.py:70: DeprecationWarning: This process (pid=6400) is multi-threaded, use of fork() may lead to deadlocks in the child.
  pid = os.fork()

[2025-05-06T19:16:58.538+0000] {standard_task_runner.py:104} INFO - Running: ['***', 'tasks', 'run', 'google_maps_reviews', 'export_to_csv', 'scheduled__2025-05-05T00:00:00+00:00', '--job-id', '592', '--raw', '--subdir', 'DAGS_FOLDER/***dag.py', '--cfg-path', '/tmp/tmpw6te6tyn']
[2025-05-06T19:16:58.539+0000] {standard_task_runner.py:72} INFO - Started process 6415 to run task
[2025-05-06T19:16:58.539+0000] {standard_task_runner.py:105} INFO - Job 592: Subtask export_to_csv
[2025-05-06T19:16:58.585+0000] {task_command.py:467} INFO - Running <TaskInstance: google_maps_reviews.export_to_csv scheduled__2025-05-05T00:00:00+00:00 [running]> on host 8280c28b7f0f
[2025-05-06T19:16:58.658+0000] {taskinstance.py:3134} INFO - Exporting env vars: AIRFLOW_CTX_DAG_OWNER='***' AIRFLOW_CTX_DAG_ID='google_maps_reviews' AIRFLOW_CTX_TASK_ID='export_to_csv' AIRFLOW_CTX_EXECUTION_DATE='2025-05-05T00:00:00+00:00' AIRFLOW_CTX_TRY_NUMBER='29' AIRFLOW_CTX_DAG_RUN_ID='scheduled__2025-05-05T00:00:00+00:00'
[2025-05-06T19:16:58.660+0000] {logging_mixin.py:190} INFO - Task instance is in running state
[2025-05-06T19:16:58.661+0000] {logging_mixin.py:190} INFO -  Previous state of the Task instance: queued
[2025-05-06T19:16:58.662+0000] {logging_mixin.py:190} INFO - Current task name:export_to_csv state:running start_date:2025-05-06 19:16:58.508059+00:00
[2025-05-06T19:16:58.662+0000] {logging_mixin.py:190} INFO - Dag name:google_maps_reviews and current dag run status:running
[2025-05-06T19:16:58.663+0000] {taskinstance.py:732} INFO - ::endgroup::
[2025-05-06T19:16:58.672+0000] {base.py:84} INFO - Retrieving connection 'postgres_defaut'
[2025-05-06T19:16:58.676+0000] {taskinstance.py:3313} ERROR - Task failed with exception
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/models/taskinstance.py", line 768, in _execute_task
    result = _execute_callable(context=context, **execute_callable_kwargs)
             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/models/taskinstance.py", line 734, in _execute_callable
    return ExecutionCallableRunner(
           ^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/utils/operator_helpers.py", line 252, in run
    return self.func(*args, **kwargs)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/models/baseoperator.py", line 424, in wrapper
    return func(self, *args, **kwargs)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/operators/python.py", line 238, in execute
    return_value = self.execute_callable()
                   ^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/operators/python.py", line 256, in execute_callable
    return runner.run(*self.op_args, **self.op_kwargs)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/utils/operator_helpers.py", line 252, in run
    return self.func(*args, **kwargs)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/opt/airflow/dags/storeData.py", line 87, in export_data
    cur.execute(query)
psycopg2.errors.SyntaxError: syntax error at or near ";"
LINE 33: ;
         ^

[2025-05-06T19:16:58.690+0000] {logging_mixin.py:190} INFO - Task instance in failure state
[2025-05-06T19:16:58.691+0000] {logging_mixin.py:190} INFO - Task start:2025-05-06 19:16:58.508059+00:00 end:2025-05-06 19:16:58.690425+00:00 duration:0.182366
[2025-05-06T19:16:58.692+0000] {logging_mixin.py:190} INFO - Task:<Task(PythonOperator): export_to_csv> dag:<DAG: google_maps_reviews> dagrun:<DagRun google_maps_reviews @ 2025-05-05 00:00:00+00:00: scheduled__2025-05-05T00:00:00+00:00, state:running, queued_at: 2025-05-06 19:14:32.544707+00:00. externally triggered: False>
[2025-05-06T19:16:58.692+0000] {logging_mixin.py:190} INFO - Failure caused by syntax error at or near ";"
LINE 33: ;
         ^
[2025-05-06T19:16:58.693+0000] {taskinstance.py:1226} INFO - Marking task as UP_FOR_RETRY. dag_id=google_maps_reviews, task_id=export_to_csv, run_id=scheduled__2025-05-05T00:00:00+00:00, execution_date=20250505T000000, start_date=20250506T191658, end_date=20250506T191658
[2025-05-06T19:16:58.716+0000] {taskinstance.py:341} INFO - ::group::Post task execution logs
[2025-05-06T19:16:58.717+0000] {standard_task_runner.py:124} ERROR - Failed to execute job 592 for task export_to_csv (syntax error at or near ";"
LINE 33: ;
         ^
; 6415)
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/task/task_runner/standard_task_runner.py", line 117, in _start_by_fork
    ret = args.func(args, dag=self.dag)
          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/cli/cli_config.py", line 49, in command
    return func(*args, **kwargs)
           ^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/utils/cli.py", line 116, in wrapper
    return f(*args, **kwargs)
           ^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/cli/commands/task_command.py", line 483, in task_run
    task_return_code = _run_task_by_selected_method(args, _dag, ti)
                       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/cli/commands/task_command.py", line 256, in _run_task_by_selected_method
    return _run_raw_task(args, ti)
           ^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/cli/commands/task_command.py", line 341, in _run_raw_task
    return ti._run_raw_task(
           ^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/utils/session.py", line 97, in wrapper
    return func(*args, session=session, **kwargs)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/models/taskinstance.py", line 3006, in _run_raw_task
    return _run_raw_task(
           ^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/models/taskinstance.py", line 274, in _run_raw_task
    TaskInstance._execute_task_with_callbacks(
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/models/taskinstance.py", line 3161, in _execute_task_with_callbacks
    result = self._execute_task(context, task_orig)
             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/models/taskinstance.py", line 3185, in _execute_task
    return _execute_task(self, context, task_orig)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/models/taskinstance.py", line 768, in _execute_task
    result = _execute_callable(context=context, **execute_callable_kwargs)
             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/models/taskinstance.py", line 734, in _execute_callable
    return ExecutionCallableRunner(
           ^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/utils/operator_helpers.py", line 252, in run
    return self.func(*args, **kwargs)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/models/baseoperator.py", line 424, in wrapper
    return func(self, *args, **kwargs)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/operators/python.py", line 238, in execute
    return_value = self.execute_callable()
                   ^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/operators/python.py", line 256, in execute_callable
    return runner.run(*self.op_args, **self.op_kwargs)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/utils/operator_helpers.py", line 252, in run
    return self.func(*args, **kwargs)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/opt/airflow/dags/storeData.py", line 87, in export_data
    cur.execute(query)
psycopg2.errors.SyntaxError: syntax error at or near ";"
LINE 33: ;
         ^

[2025-05-06T19:16:58.755+0000] {local_task_job_runner.py:266} INFO - Task exited with return code 1
[2025-05-06T19:16:58.778+0000] {taskinstance.py:3901} INFO - 0 downstream tasks scheduled from follow-on schedule check
[2025-05-06T19:16:58.780+0000] {local_task_job_runner.py:245} INFO - ::endgroup::
